--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "kayn": "^0.8.24"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
